--- a/Basic Concepts/1.1- About.md
+++ b/Basic Concepts/1.1- About.md
@@ -1,5 +1,7 @@
 # About Python
 Python is one of the most popular programming languages, widely used in web and game development, data analytics, data science, machine learning and much more.
+# Contents
+
 # Output
 The print command is the easiest way to send a specified message to the screen or other display device. This message or output can be a number, text, or the result of a calculation.
 ```python
@@ -11,3 +13,10 @@ print(7)
 > The print command is always followed by parentheses containing the output we want to send to the screen.
 # Printing Text
 Computers treat text and numbers differently. When printing text outputs, you need to enclose the text in either single or double quotes
+```python
+print("Welcome to Python")
+print('World!')
+```
+```
+Welcome to Python!
+```
