--- a/Basic Concepts/1.1- About.md
+++ b/Basic Concepts/1.1- About.md
@@ -1,7 +1,5 @@
 # About Python
 Python is one of the most popular programming languages, widely used in web and game development, data analytics, data science, machine learning and much more.
-# Contents
-
 # Output
 The print command is the easiest way to send a specified message to the screen or other display device. This message or output can be a number, text, or the result of a calculation.
 ```python
@@ -19,4 +17,16 @@ print('World!')
 ```
 ```
 Welcome to Python!
+World!
 ```
+The text in quotes is called string.
+> The quotes enclosing the text need to be the same, either both single or both double. If you forget to add the quotes or if the quotes are not the same, Python will return an error.
+# Printing Text
+There are situations where you might want to print multiple messages in your code.
+Each print statement outputs text in a new line
+```python
+print("Car List:")
+print("Lamborghini")
+print("Ferrari")
+```
+> Python gets its name from the BBC comedy TV series Monty Python because its creator thought he needed a name that was short, unique, and slightly mysterious.
