--- a/Basic Concepts/1.1- About.md
+++ b/Basic Concepts/1.1- About.md
@@ -21,12 +21,17 @@ World!
 ```
 The text in quotes is called string.
 > The quotes enclosing the text need to be the same, either both single or both double. If you forget to add the quotes or if the quotes are not the same, Python will return an error.
-# Printing Text
+
 There are situations where you might want to print multiple messages in your code.
 Each print statement outputs text in a new line
 ```python
 print("Car List:")
 print("Lamborghini")
 print("Ferrari")
+```
+```
+Car List:
+Lamborghini
+Ferrari
 ```
 > Python gets its name from the BBC comedy TV series Monty Python because its creator thought he needed a name that was short, unique, and slightly mysterious.
