--- a/Basic Concepts/1.2- Simple Operation.md
+++ b/Basic Concepts/1.2- Simple Operation.md
@@ -15,7 +15,7 @@ print(10 / 2)
 10
 5.0
 ```
-> See the spaces around the plus sign? The code will work without them – but including them makes it a lot easier to read.
+> See the spaces around the signs? The code will work without them – but including them makes it a lot easier to read.
 
 Just like in regular math, we can use parentheses to indicate the operations we want performed:
 ```python
